--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 body{
     width: 95%;
     height:auto;
- 
+		font-family: 'Roboto', sans-serif;
     display: flex;
-    
     justify-content: center;
     background: linear-gradient(90deg, #eee0f01a, #efefef36);
 }
